s390x build failures after JDK-8216167 (Update include guards to reflect correct directories)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 13
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b04

      It seems the script was incorrect, because it doubles-up #endifs, see for example here:
        http://hg.openjdk.java.net/jdk/jdk/rev/9807daeb47c4#l128.1

      So s390x build fails with:

      /home/buildbot/worker/jdkX-linux/build/src/hotspot/os_cpu/linux_s390/globals_linux_s390.hpp:53:2: error: #endif without #if
       #endif // OS_CPU_LINUX_S390_GLOBALS_LINUX_S390_HPP
        ^~~~~

      It seems only s390x is affected.

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: