8216589: s390x build failures after JDK-8216167 (Update include guards to reflect correct directories)

Reviewed-by: dholmes